...
                                              CrossAxisAlignment.start,
                                          children: [
                                            SizedBox(
                                              width: double.infinity,
                                              child: TextFormField(
                                                key: const ValueKey(
                                                    'Login-email_suq5'),
                                                controller: _model
                                                    .loginEmailTextController,
                                                focusNode:
                                                    _model.loginEmailFocusNode,
                                                autofocus: false,
                                                obscureText: false,
...
                                              ),
                                            ),
                                            SizedBox(
                                              width: double.infinity,
                                              child: TextFormField(
                                                key: const ValueKey(
                                                    'login-password_z8vp'),
                                                controller: _model
                                                    .loginPasswordTextController,
                                                focusNode: _model
                                                    .loginPasswordFocusNode,
                                                autofocus: false,
                                                textInputAction:
...
                                ),
                              ),
                            if (_model.tabBarCurrentIndex == 1)
                              Align(
                                alignment: const AlignmentDirectional(0.0, 0.0),
                                child: FFButtonWidget(
                                  key: const ValueKey('Login-Button_e02q'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'LOGIN_PAGE_Login-Button_ON_TAP');
                                    logFirebaseEvent(
                                        'Login-Button_validate_form');
                                    if (_model.formKey2.currentState == null ||
...
                              ),
                          ],
                        ),
                        Align(
                          alignment: const AlignmentDirectional(0.0, 0.0),
                          child: FFButtonWidget(
                            key: const ValueKey('Forgot_button_2nqi'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_PAGE_Forgot_button_ON_TAP');
                              logFirebaseEvent('Forgot_button_navigate_to');

                              context.pushNamed('ResetPassword');
...
