...
                                          MainAxisAlignment.spaceEvenly,
                                      children: [
                                        Align(
                                          alignment:
                                              const AlignmentDirectional(-1.0, 0.0),
                                          child: Text(
                                            key: const ValueKey('Protein_v2s1'),
                                            'Protein',
                                            textAlign: TextAlign.start,
                                            style: FlutterFlowTheme.of(context)
                                                .bodyMedium
                                                .override(
                                                  fontFamily: 'Inter',
...
                                                            .fromSTEB(60.0, 0.0,
                                                                0.0, 0.0),
                                                    child: AuthUserStreamWidget(
                                                      builder: (context) =>
                                                          Text(
                                                        key: const ValueKey(
                                                            'Text_thac'),
                                                        valueOrDefault(
                                                            currentUserDocument
                                                                ?.preferredMeasurement,
                                                            ''),
                                                        style:
                                                            FlutterFlowTheme.of(
...
                                                            .fromSTEB(60.0, 0.0,
                                                                0.0, 0.0),
                                                    child: AuthUserStreamWidget(
                                                      builder: (context) =>
                                                          Text(
                                                        key: const ValueKey(
                                                            'Text_hy9z'),
                                                        valueOrDefault(
                                                            currentUserDocument
                                                                ?.preferredMeasurement,
                                                            ''),
                                                        style:
                                                            FlutterFlowTheme.of(
...
