...
                        width: 318.0,
                        height: 54.0,
                        fit: BoxFit.cover,
                      ),
                    ),
                    Text(
                      'Enter Email To Reset Password',
                      style:
                          FlutterFlowTheme.of(context).headlineMedium.override(
                                fontFamily: 'Oswald',
                                letterSpacing: 0.0,
                              ),
                    ),
...
